Fixed grid alignments #88, #85, #89

--- a/grails-app/assets/stylesheets/pashion/components/_menu-bar.scss
+++ b/grails-app/assets/stylesheets/pashion/components/_menu-bar.scss
@@ -40,7 +40,6 @@ $menubar-icon-spacing: $menubar-item-padding !default;
 
 // Menu bar container
 %menu-bar {
-  min-height: 90px;
   display: flex;
   align-items: stretch;
   margin: 0;
